Update printer configuration for improved stability and added macros.

--- a/3d_printer_annet/printer.cfg
+++ b/3d_printer_annet/printer.cfg
@@ -69,7 +69,7 @@ filament_diameter: 1.750
 heater_pin: PB4
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PK5
-gear_ratio: 3.5:1 
+gear_ratio: 3.5:1
 rotation_distance: 25.963615 #26.359
 control = pid
 pid_kp = 20.357
@@ -78,6 +78,8 @@ pid_kd = 91.607
 max_temp: 300
 min_temp: 0
 max_extrude_only_distance: 101
+pressure_advance: 0.04  # Default for Sprite Extruder Pro, calibrate for your specific setup
+pressure_advance_smooth_time: 0.040
 
 [heater_bed]
 heater_pin: PH5
@@ -95,10 +97,11 @@ serial: /dev/ttyUSB0
 
 [printer]
 kinematics: cartesian
-max_velocity: 200
-max_accel: 2000
-max_z_velocity: 20
-max_z_accel: 100
+max_velocity: 100  # Reduced from 200 for more stable printing
+max_accel: 500     # Reduced from 2000 for more stable printing
+max_z_velocity: 5  # Reduced from 20 for more stable printing
+max_z_accel: 50    # Reduced from 100 for more stable printing
+square_corner_velocity: 5  # Added for smoother cornering
 
 # [stepper_x]
 # step_pin: PD7
@@ -196,6 +199,11 @@ max_z_accel: 100
 # shaper_freq_y: 45.6
 # shaper_type_y: mzv
 
+[input_shaper]
+shaper_freq_x: 50  # Conservative value for testing
+shaper_freq_y: 50  # Conservative value for testing
+shaper_type: mzv   # Good general-purpose shaper type
+
 [virtual_sdcard]
 #path:/home/mks/uploads
 path: ~/printer_data/gcodes
@@ -209,6 +217,42 @@ gcode:
   TURN_OFF_HEATERS
   CANCEL_PRINT_BASE
 
+[gcode_macro PRINT_START]
+gcode:
+    # Parameters
+    {% set EXTRUDER = params.EXTRUDER|default(190)|float %}
+    {% set BED = params.BED|default(60)|float %}
+
+    # Home and prepare
+    G28                            ; Home all axes
+    G90                            ; Absolute positioning
+    M83                            ; Extruder relative mode
+    G1 Z20 F240                    ; Move up to avoid scratching
+    M140 S{BED}                    ; Set bed temperature
+    M104 S140                      ; Set extruder temp for bed leveling
+    M190 S{BED}                    ; Wait for bed to reach temperature
+
+    # Level the bed if you have bed mesh
+    BED_MESH_CALIBRATE             ; Perform bed mesh leveling (comment this out if you don't have bed mesh)
+
+    # Final heating and prime
+    M104 S{EXTRUDER}               ; Set final extruder temperature
+    G1 X5 Y10 Z0.3 F3000           ; Move to start position
+    M109 S{EXTRUDER}               ; Wait for extruder to reach temperature
+    G1 X40 E10 F500                ; Extrude a line of filament
+    G92 E0                         ; Reset extruder position
+
+[gcode_macro PRINT_END]
+gcode:
+    G91                            ; Relative positioning
+    G1 E-2 F2700                   ; Retract filament
+    G1 Z10 F3000                   ; Move Z up 10mm
+    G90                            ; Absolute positioning
+    G1 X0 Y220 F3000               ; Move to front
+    M106 S0                        ; Turn off fan
+    M104 S0                        ; Turn off hotend
+    M140 S0                        ; Turn off bed
+    M84                            ; Disable motors
 
 # [display_status]
 
