Enhance printer configuration by adding manual bed leveling macro and increasing max extrude cross section for improved extrusion capabilities.

--- a/3d_printer_annet/printer.cfg
+++ b/3d_printer_annet/printer.cfg
@@ -58,7 +58,6 @@ position_max: 300
 position_min: -0.8
 homing_speed: 20
 
-
 [extruder]
 step_pin: PA4
 dir_pin: !PA6
@@ -78,6 +77,7 @@ pid_kd = 91.607
 max_temp: 300
 min_temp: 0
 max_extrude_only_distance: 101
+max_extrude_cross_section: 0.8  # Increased from default 0.64 to allow for larger extrusions
 pressure_advance: 0.04  # Default for Sprite Extruder Pro, calibrate for your specific setup
 pressure_advance_smooth_time: 0.040
 
@@ -232,8 +232,9 @@ gcode:
     M104 S140                      ; Set extruder temp for bed leveling
     M190 S{BED}                    ; Wait for bed to reach temperature
 
-    # Level the bed if you have bed mesh
-    BED_MESH_CALIBRATE             ; Perform bed mesh leveling (comment this out if you don't have bed mesh)
+    # No bed mesh since we don't have a probe
+    # Manual bed leveling should be done before printing
+    # Using the BED_SCREWS_ADJUST command
 
     # Final heating and prime
     M104 S{EXTRUDER}               ; Set final extruder temperature
@@ -263,6 +264,25 @@ gcode:
     G28
     QUAD_GANTRY_LEVEL
     G28
+
+[gcode_macro LEVEL_BED]
+description: Assists with manual bed leveling using the corner screws
+gcode:
+    # Heat the bed to leveling temperature if needed
+    {% set BED = params.BED|default(60)|float %}
+
+    # Home and prepare
+    G28                            ; Home all axes
+    G90                            ; Absolute positioning
+
+    # Heat the bed if requested
+    {% if BED > 30 %}
+      M140 S{BED}                  ; Set bed temperature
+      M190 S{BED}                  ; Wait for bed to reach temperature
+    {% endif %}
+
+    # Start bed screw adjustment
+    BED_SCREWS_ADJUST              ; Run Klipper's built-in bed screw adjustment routine
 
 # [include moonraker_obico_macros.cfg]
 
