--- a/3d_printer_annet/printer.cfg
+++ b/3d_printer_annet/printer.cfg
@@ -204,6 +204,9 @@ shaper_freq_x: 50  # Conservative value for testing
 shaper_freq_y: 50  # Conservative value for testing
 shaper_type: mzv   # Good general-purpose shaper type
 
+[gcode_arcs]
+resolution: 0.1
+
 [virtual_sdcard]
 #path:/home/mks/uploads
 path: ~/printer_data/gcodes
