--- a/3d_printer_annet/printer.cfg
+++ b/3d_printer_annet/printer.cfg
@@ -69,7 +69,7 @@ heater_pin: PB4
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PK5
 gear_ratio: 3.5:1
-rotation_distance: 25.963615 #26.359
+rotation_distance: 26.359
 control = pid
 pid_kp = 20.357
 pid_ki = 1.131
