add start end macros

--- a/cr200bpro/Fluidd Printer Configuration.cfg
+++ b/cr200bpro/Fluidd Printer Configuration.cfg
@@ -103,6 +103,38 @@ gcode:
     M84
   CANCEL_PRINT_BASE
 
+[gcode_macro START_PRINT]
+description: "CR-200B Pro + CR Touch start"
+gcode:
+  {% set BED = params.BED|default(60)|float %}
+  {% set HOT = params.EXTRUDER|default(200)|float %}
+
+  M140 S{BED}                 ; pre-heat bed
+  M104 S{HOT}                 ; pre-heat nozzle (no wait)
+  G28                          ; home all (CR Touch does Z)
+  BED_MESH_PROFILE load=default
+  M190 S{BED}                 ; wait bed
+  M109 S{HOT}                 ; wait nozzle
+  G1 Z5 F3000
+  G1 X0 Y0 F6000
+  G92 E0
+  G1 X120 E12 F900            ; purge line
+  G92 E0
+
+
+[gcode_macro END_PRINT]
+description: "Park, cool and release steppers"
+gcode:
+  G91
+  G1 Z10 F600                 ; raise head
+  G90
+  G1 X0 Y200 F4000            ; bed forward for part removal
+  M104 S0
+  M140 S0
+  M107
+  M84                         ; steppers off
+
+
 [stepper_x]
 step_pin: PB9
 dir_pin: !PC13
