--- a/cr200bpro/Fluidd Printer Configuration.cfg
+++ b/cr200bpro/Fluidd Printer Configuration.cfg
@@ -117,10 +117,10 @@ gcode:
   M109 S{HOT}                 ; wait nozzle
   G1 Z5 F3000
   G1 X0 Y0 F6000
+  G1 Z0.3 F300                ; Lower nozzle to print height
   G92 E0
   G1 X120 E12 F900            ; purge line
   G92 E0
-
 
 [gcode_macro END_PRINT]
 description: "Park, cool and release steppers"
@@ -211,16 +211,31 @@ max_temp: 130
 check_gain_time: 200
 hysteresis: 5
 
+#nozzle fan k-fan1
 [fan]
 pin: PA2
 kick_start_time: 0.5
 
-[heater_fan my_nozzle_fan]
+#case fan k-fan3
+[fan_generic case_fan]
 pin: PA1
+kick_start_time: 0.5
+
+# heatblock fan k-fan2
+[heater_fan heatblock_fan]
+pin: PA3
+kick_start_time: 0.5
 heater: extruder
 heater_temp: 50
 max_power: 1
-shutdown_speed : 0
+shutdown_speed : 1
+
+[led my_led]
+white_pin: PC11
+initial_WHITE: 1.0
+
+
+
 
 [output_pin power]
 pin: PD0
@@ -327,11 +342,11 @@ square_corner_velocity: 5.0
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.002500, -0.012500, -0.017500, -0.037500, -0.055000
-#*# 	  -0.010000, -0.015000, -0.027500, -0.050000, -0.082500
-#*# 	  -0.007500, -0.010000, -0.022500, -0.062500, -0.085000
-#*# 	  0.002500, -0.010000, -0.027500, -0.060000, -0.090000
-#*# 	  -0.032500, -0.012500, -0.035000, -0.062500, -0.075000
+#*# 	  0.022500, 0.000000, -0.012500, -0.035000, -0.060000
+#*# 	  0.010000, -0.005000, -0.022500, -0.057500, -0.100000
+#*# 	  0.007500, -0.007500, -0.030000, -0.070000, -0.100000
+#*# 	  -0.002500, -0.007500, -0.032500, -0.075000, -0.110000
+#*# 	  -0.060000, -0.022500, -0.045000, -0.072500, -0.092500
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
