--- a/anet/Anet A8+ Printer Configuration.cfg
+++ b/anet/Anet A8+ Printer Configuration.cfg
@@ -25,9 +25,9 @@ microsteps: 16
 rotation_distance: 40
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
 endstop_pin:^!PA14
-position_min: -15
-position_endstop: -15
-position_max: 235
+position_min: -35
+position_endstop: -35
+position_max: 255
 homing_speed:50
 homing_retract_dist:5
 step_pulse_duration:0.000008
@@ -40,9 +40,9 @@ microsteps:16
 rotation_distance: 40
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
 endstop_pin:^!PA15
-position_min: -2
-position_endstop: -2
-position_max: 218
+position_min: -27
+position_endstop: -27
+position_max: 265
 homing_speed:50
 homing_retract_dist:5
 step_pulse_duration:0.000008
@@ -162,6 +162,19 @@ screw1:0,0
 screw2:220,0
 screw3:220,220
 screw4:0,220
+
+[screws_tilt_adjust]
+screw1: 30,40
+screw1_name: front left screw
+screw2: 250,40
+screw2_name: front right screw
+screw3: 250,260
+screw3_name: rear right screw
+screw4: 30,260
+screw4_name: rear left screw
+horizontal_move_z: 10
+speed: 50
+screw_thread: CW-M4
 
 #####################################################################
 # 	Probe
@@ -353,9 +366,9 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.155000, 0.220000, 0.280000, 0.222500, 0.110000
-#*# 	  0.057500, 0.242500, 0.215000, 0.180000, 0.197500
-#*# 	  -0.177500, -0.070000, 0.132500, 0.322500, 0.147500
+#*# 	-0.367500, -0.865000, -0.595000, -0.510000, 0.400000
+#*# 	-0.215000, 0.027500, 0.160000, 0.225000, 0.157500
+#*# 	-0.070000, 0.092500, 0.162500, 0.090000, -0.132500
 #*# x_count = 5
 #*# y_count = 3
 #*# mesh_x_pps = 2
@@ -368,4 +381,4 @@ gcode:
 #*# max_y = 220.0
 #*#
 #*# [bltouch]
-#*# z_offset = 3.170
+#*# z_offset = 2.225
