--- a/anet/Anet A8+ Printer Configuration.cfg
+++ b/anet/Anet A8+ Printer Configuration.cfg
@@ -83,7 +83,7 @@ step_pin:PB5
 dir_pin:!PB4
 enable_pin:!PB6
 microsteps:16
-rotation_distance: 25.12	#Bondtech 5mm Drive Gears
+rotation_distance: 33.49
 gear_ratio: 50:17
 full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
@@ -102,7 +102,7 @@ pressure_advance: 0.00
 pressure_advance_smooth_time: 0.150
 max_extrude_cross_section:20
 instantaneous_corner_velocity: 1.000
-max_extrude_only_distance: 50.0
+max_extrude_only_distance: 120.0
 max_extrude_only_velocity:5000
 max_extrude_only_accel:2000
 step_pulse_duration:0.000004
