--- a/anet/Anet A8+ Printer Configuration.cfg
+++ b/anet/Anet A8+ Printer Configuration.cfg
@@ -79,33 +79,32 @@ gear_ratio: 80:16
 
 
 [extruder]
-step_pin:PB5
-dir_pin:!PB4
-enable_pin:!PB6
-microsteps:16
-rotation_distance: 33.49
-gear_ratio: 50:17
-full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
+step_pin: PB5
+dir_pin: !PB4
+enable_pin: !PB6
+microsteps: 16
+rotation_distance: 7.530         # → 424.9 steps/mm for a 1.8 ° motor
+full_steps_per_rotation: 200
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 min_temp: -100
 max_temp: 275
 heater_pin: PB1
-sensor_type:  NTC 100K MGB18-104F39050L32
+sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: PC1
 max_power: 1.0
-control : pid
-pid_kp : 26.213
-pid_ki : 1.304
-pid_kd : 131.721
-pressure_advance: 0.00
+control: pid
+pid_kp: 26.213
+pid_ki: 1.304
+pid_kd: 131.721
+pressure_advance: 0.000
 pressure_advance_smooth_time: 0.150
-max_extrude_cross_section:20
+max_extrude_cross_section: 20
 instantaneous_corner_velocity: 1.000
 max_extrude_only_distance: 120.0
-max_extrude_only_velocity:5000
-max_extrude_only_accel:2000
-step_pulse_duration:0.000004
+max_extrude_only_velocity: 5000
+max_extrude_only_accel: 2000
+step_pulse_duration: 0.000004
 
 
 [heater_bed]
